# sys-prog-4demo

./: README.md  a.out  button.c  button4tty  rasp4.c  timer.c
etc/: a.out  client  client.c  rfid_reader_slot.py  server  server.c
final/: protocol.c  protocol.h  protocol.h.gch  server_1.c  server_1.h  tempandlcd_3.c  terminal_2.c
server/: mian.c  server.c
slot(deprecated)/: slot.c
slot1/: a.out
slot2/: LCDnTnH  LCDnTnH.c
terminal/: a.out  basic_tree.c  basic_tree.h  button4tty.c  joojak  joojak.c  lcd.h  lcd4tty  lcd4tty.c  main.c  menu.c  menu.json  prog  prog.c  rfid_reader.py  server  server.c
terminal1/: CMakeLists.txt  _lcd.c  a.out  button.c  lcd.c  main.c  rfid_reader.py
